feat: integrate Ant Design and Sass support, add routing and home page

--- a/.npmrc
+++ b/.npmrc
@@ -55,5 +55,5 @@ fetch-retries=3
 # cert=/path/to/client-cert.pem
 # key=/path/to/client-key.pem
 
-# Disable package-lock.json creation (we use pnpm-lock.yaml)
+# Disable npm's package-lock.json creation (we use pnpm-lock.yaml instead)
 package-lock=false
