--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "cd ../.. && pnpm eslint apps/web/src --fix"
   },
   "dependencies": {
+    "antd": "5.26.7",
     "garfish": "1.19.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -20,6 +21,7 @@
     "@eslint/js": "9.32.0",
     "@rsbuild/core": "1.4.13",
     "@rsbuild/plugin-react": "1.3.4",
+    "@rsbuild/plugin-sass": "1.3.5",
     "@types/node": "22.13.10",
     "@types/react": "18.3.17",
     "@types/react-dom": "18.3.5",
