--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
+    "@types/node": "22.13.10",
     "eslint": "9.32.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-react": "7.37.5",
@@ -25,6 +26,9 @@
     "globals": "16.3.0",
     "only-allow": "1.2.1",
     "prettier": "3.6.2",
+    "rimraf": "6.0.1",
+    "tsup": "8.3.5",
+    "tsx": "4.19.2",
     "typescript": "5.9.2",
     "typescript-eslint": "8.39.0"
   },
