fix: update concurrency group name in GitHub Actions workflow for deployment

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -19,7 +19,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}-${{ env.PROJECT_DIR }}
+      group: ${{ github.workflow }}-${{ github.ref }}-react-typescripts
       cancel-in-progress: true
 
     steps:
