--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -27,19 +27,19 @@ jobs:
         uses: actions/checkout@v4
 
       # 设置 pnpm（建议 v9），并启用 pnpm 缓存
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: Setup Node & pnpm
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'pnpm'
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
 
       # 安装依赖（monorepo 推荐在仓库根执行）
       - name: Install dependencies (pnpm)
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       # 构建 apps/web
       - name: Build apps/web
