--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -2,13 +2,16 @@ name: Build & Deploy to Cloudflare Pages (apps/web + pnpm)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'apps/web/**'
       - 'packages/**'               # 如果 web 依赖 monorepo 内的包，保留；否则可删
       - 'pnpm-lock.yaml'
       - 'package.json'
       - '.github/workflows/deploy-pages.yml'
+  pull_request:
+    branches: [ master ]
+    types: [ closed ]
   workflow_dispatch:
 
 env:
@@ -17,16 +20,20 @@ env:
 
 jobs:
   build-and-deploy:
+    # 仅在 master push 或 目标为 master 的 PR 被合并时运行
+    if: >
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}-react-typescripts
+      group: ${{ github.workflow }}-${{ github.ref_name }}-react-typescripts
       cancel-in-progress: true
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 设置 pnpm（建议 v9），并启用 pnpm 缓存
+      # 先安装 pnpm，再设置 Node（并启用 pnpm 缓存）
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -39,9 +46,8 @@ jobs:
 
       # 安装依赖（monorepo 推荐在仓库根执行）
       - name: Install dependencies (pnpm)
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
-      # 构建 apps/web
       - name: Build apps/web
         working-directory: ${{ env.PROJECT_DIR }}
         run: pnpm run build
@@ -53,8 +59,8 @@ jobs:
             --project-name "react-typescripts" \
             --branch "master"
         env:
-          CLOUDFLARE_API_TOKEN: "XIrS_vkWeo21A1RFrRQJsjvda8hcOy0eBFoMiK0e"
-
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       # 可选：把此次构建的 dist 归档，方便下载/核对
       - name: Upload dist artifact (optional)
         uses: actions/upload-artifact@v4
