--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -15,11 +15,12 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
+    "cf:update": "tsx src/cloudflare-pages-update.ts",
     "build": "tsup src/index.ts src/cli.ts --format esm --out-dir dist --dts",
     "clean": "rimraf dist",
     "type-check": "tsc --noEmit",
-    "lint": "cd ../.. && pnpm eslint packages/scripts/src",
-    "lint:fix": "cd ../.. && pnpm eslint packages/scripts/src --fix"
+    "lint": "pnpm exec eslint -c ./eslint.config.js \"src/**/*.{ts,tsx,js}\"",
+    "lint:fix": "pnpm exec eslint -c ./eslint.config.js \"src/**/*.{ts,tsx,js}\" --fix"
   },
   "devDependencies": {
     "@types/node": "22.13.10",
@@ -30,5 +31,3 @@
     "typescript": "5.9.2"
   }
 }
-
-
