--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "description": "Node runnable TypeScript scripts for the monorepo",
   "bin": {
-    "ts-script": "./dist/cli.mjs"
+    "lint-name": "./dist/lint-name.mjs"
   },
   "main": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -13,10 +13,15 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts",
-    "cf:update": "tsx src/cloudflare-pages-update.ts",
-    "build": "tsup src/index.ts src/cli.ts --format esm --out-dir dist --dts",
+    "dev": "node --watch src/index.ts",
+    "start": "node src/index.ts",
+    "cf:update": "node src/cloudflare-pages-update.ts",
+    "lint-name": "node src/lint-name.ts",
+    "name:check": "node src/name-case.ts --mode check --dir",
+    "name:fix": "node src/name-case.ts --mode fix --dir",
+    "name:rename:1": "node src/name-case.ts --mode rename --step 1 --scope",
+    "name:rename:2": "node src/name-case.ts --mode rename --step 2 --scope",
+    "build": "tsup src/index.ts --format esm --out-dir dist --dts",
     "clean": "rimraf dist",
     "type-check": "tsc --noEmit",
     "lint": "pnpm exec eslint -c ./eslint.config.js \"src/**/*.{ts,tsx,js}\"",
