--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,33 +38,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      # 设置 Node 并启用 yarn 缓存
+      # 设置 Node 并启用 pnpm 缓存
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: yarn
-          cache-dependency-path: yarn.lock
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
-      - name: Restore Yarn tarball cache
-        id: yarn_cache_restore
+      - name: Restore pnpm cache
+        id: pnpm_cache_restore
         uses: actions/cache/restore@v4
         with:
-          path: ~/.cache/yarn/v6
-          key: yarn-cache-${{ runner.os }}-${{ env.NODE_VERSION }}-${{ hashFiles('yarn.lock') }}
+          path: ~/.cache/pnpm
+          key: pnpm-cache-${{ runner.os }}-${{ env.NODE_VERSION }}-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Prepare (version + install)
         id: prepare
         run: |
           npx --yes tsx .github/scripts/gen-version.ts
-          yarn install --frozen-lockfile --prefer-offline
+          pnpm install --frozen-lockfile --prefer-offline
 
-      - name: Save Yarn tarball cache (save when not restored)
-        if: ${{ steps.yarn_cache_restore.outputs.cache-hit != 'true' }}
+      - name: Save pnpm cache (save when not restored)
+        if: ${{ steps.pnpm_cache_restore.outputs.cache-hit != 'true' }}
         uses: actions/cache/save@v4
         with:
-          path: ~/.cache/yarn/v6
-          key: yarn-cache-${{ runner.os }}-${{ env.NODE_VERSION }}-${{ hashFiles('yarn.lock') }}
+          path: ~/.cache/pnpm
+          key: pnpm-cache-${{ runner.os }}-${{ env.NODE_VERSION }}-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Generate project list
         id: gen
