chore: update GitHub Actions workflow to improve pnpm cache setup and restore keys

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,14 +48,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
 
-      - name: Restore pnpm store
-        uses: actions/cache@v3
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
         with:
-          path: ~/.pnpm-store
+          path: /home/runner/setup-pnpm/node_modules/.bin/store
           key: pnpm-store-${{ runner.os }}-${{ env.NODE_VERSION }}-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            pnpm-store-${{ runner.os }}-${{ env.NODE_VERSION }}-
+            pnpm-store-${{ runner.os }}-
 
       - name: Prepare (version + install)
         id: prepare
