refactor: restructure Lark card handling and improve deployment card functionality
- Renamed application service from 'lark-service' to 'node-service' for clarity.
- Moved card creation logic to a dedicated utility file for better organization and reusability.
- Updated deployment card creation to utilize the new utility functions, enhancing modularity.
- Improved comments and logging for better clarity and debugging.
- Adjusted GitHub Actions workflow to support direct execution via workflow_dispatch.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ env:
 
 jobs:
   build-and-deploy:
-    # 集成分支的 push 一律构建；PR 仅在带 deploy 标签时构建（精确匹配）；飞书手动触发直接执行
+    # 集成分支的 push 一律构建；PR 仅在带 deploy 标签时构建（精确匹配）；workflow_dispatch 直接执行
     if: >-
       github.event_name == 'push' ||
       github.event_name == 'workflow_dispatch' ||
