feat: implement deployment notification system with callback support
- Added a new function to notify deployment results via webhook and callback, enhancing deployment tracking.
- Introduced a DeploymentNotification interface for structured notification payloads.
- Updated the build-and-deploy script to utilize the new notification system for both success and failure scenarios.
- Enhanced GitHub Actions workflow to pass message ID for callback handling.
- Created a LarkCallbackController to handle incoming deployment status updates from GitHub Actions.
- Improved card creation logic to include project and version details in success and failure notifications.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ on:
         description: 'Mode'
         required: true
         default: 'manual'
+      message_id:
+        description: 'Lark Message ID for callback'
+        required: false
 
 env:
   NODE_VERSION: 22.18.0
@@ -87,9 +90,13 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           LARK_WEBHOOK_URL: ${{ secrets.LARK_WEBHOOK_URL }}
+          LARK_CALLBACK_URL: ${{ vars.LARK_CALLBACK_URL }}
           PAIRS: ${{ steps.gen.outputs.pairs }}
           PR_URL: ${{ github.event.pull_request.html_url }}
           GITHUB_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          REGION: ${{ github.event.inputs.region || 'global' }}
+          MODE: ${{ github.event.inputs.mode || 'manual' }}
+          MESSAGE_ID: ${{ github.event.inputs.message_id }}
         run: |
           npx --yes tsx .github/scripts/build-and-deploy.ts
 
