refactor: update deployment notification system to use openMessageId
- Renamed messageId to openMessageId across scripts for consistency in handling Lark notifications.
- Updated build-and-deploy, list-projects, and card action trigger scripts to reflect the new naming convention.
- Enhanced callback handling in the GitHub Actions workflow to utilize openMessageId for improved clarity.
- Removed the send-lark script as its functionality is no longer needed, streamlining the codebase.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ on:
         description: 'Mode'
         required: true
         default: 'manual'
-      message_id:
+      open_message_id:
         description: 'Lark Message ID for callback'
         required: false
 
@@ -83,7 +83,7 @@ jobs:
           LAST_SHA: ${{ github.event.before || github.event.pull_request.base.sha || 'HEAD~1' }}
           HEAD_SHA: ${{ github.sha }}
           GITHUB_EVENT_NAME: ${{ github.event_name }}
-          MESSAGE_ID: ${{ github.event.inputs.message_id }}
+          OPEN_MESSAGE_ID: ${{ github.event.inputs.open_message_id }}
           BRANCH_NAME: ${{ env.BRANCH_NAME }}
           REGION: ${{ github.event.inputs.region || 'global' }}
           MODE: ${{ github.event.inputs.mode || 'manual' }}
@@ -94,12 +94,11 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          LARK_WEBHOOK_URL: ${{ secrets.LARK_WEBHOOK_URL }}
           PAIRS: ${{ steps.gen.outputs.pairs }}
           PR_URL: ${{ github.event.pull_request.html_url }}
           GITHUB_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           REGION: ${{ github.event.inputs.region || 'global' }}
           MODE: ${{ github.event.inputs.mode || 'manual' }}
-          MESSAGE_ID: ${{ github.event.inputs.message_id }}
+          OPEN_MESSAGE_ID: ${{ github.event.inputs.open_message_id }}
         run: |
           npx --yes tsx .github/scripts/build-and-deploy.ts
