feat: enhance deployment notifications with PR information
- Added PR number and URL retrieval from GitHub Actions environment to build-and-deploy and list-projects scripts for improved tracking.
- Updated notification payloads to include PR details, enhancing clarity in deployment status updates.
- Modified card creation logic to display PR information in processing and success cards, providing better context for users.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,6 +87,8 @@ jobs:
           BRANCH_NAME: ${{ env.BRANCH_NAME }}
           REGION: ${{ github.event.inputs.region || 'global' }}
           MODE: ${{ github.event.inputs.mode || 'manual' }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
           GITHUB_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: Build & Deploy projects sequentially
@@ -95,6 +97,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           PAIRS: ${{ steps.gen.outputs.pairs }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
           PR_URL: ${{ github.event.pull_request.html_url }}
           GITHUB_RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           REGION: ${{ github.event.inputs.region || 'global' }}
