--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "cd ../.. && pnpm eslint apps/web/src --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "6.0.0",
     "antd": "5.26.7",
     "garfish": "1.19.5",
     "react": "18.3.1",
