feat: add offline and online Cloudflare Worker implementations with routing logic
- Introduced `cloudflare-worker-offline.js` and `cloudflare-worker-online.js` files containing complete implementations for offline and online environments, respectively.
- Implemented core routing logic, including functions for hashing strings, parsing cookies, and building new page origins tailored for each environment.
- Updated `DEPLOYMENT.md` to reflect the new worker files and provide clear instructions for deployment.
- Enhanced testing framework with dedicated test reports for both offline and online environments, ensuring robust validation of routing logic.
- Removed outdated `online.worker.test.ts` file to streamline the test suite.

--- a/apps/web-worker/package.json
+++ b/apps/web-worker/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:report": "tsx scripts/generate-test-report.ts",
+    "test:offline": "jest routing-logic.test.ts",
+    "test:online": "jest online-routing.test.ts",
+    "test:offline:watch": "jest routing-logic.test.ts --watch",
+    "test:online:watch": "jest online-routing.test.ts --watch",
+    "test:report": "tsx scripts/generate-offline-test-report.ts",
+    "test:report:offline": "tsx scripts/generate-offline-test-report.ts",
+    "test:report:online": "tsx scripts/generate-online-test-report.ts",
     "dev": "tsx scripts/test.ts"
   },
   "devDependencies": {
