feat: implement workspace platform with routing and application management
- Introduced a new workspace platform featuring a layout with navigation, application management, and deployment sections.
- Added pages for home, application, and deployment, each with corresponding styles and components.
- Implemented a CreateApplicationDrawer for creating new applications with form validation and repository selection.
- Integrated Ant Design components for a cohesive UI experience and improved user interaction.
- Established routing logic to navigate between different sections of the application, enhancing user experience.
- Included comprehensive styles for responsive design and improved visual consistency across components.

--- a/apps/node-service/package.json
+++ b/apps/node-service/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nest start --watch"
+    "dev": "nest start --watch",
+    "build": "nest build",
+    "start": "node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main",
+    "test:api": "node testing/test-deployed-service.js",
+    "test:api:local": "node testing/test-deployed-service.js http://localhost:8080",
+    "test:api:help": "node testing/test-deployed-service.js --help"
   },
   "dependencies": {
     "@larksuiteoapi/node-sdk": "1.55.0",
